--- a/R_file.Rmd
+++ b/R_file.Rmd
@@ -9,12 +9,6 @@ output: html_document
 knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE)
 ```
 
-# Base numéro 1 
-## Importation de la base et des packages 
-Import des données via le lien suivant : https://www.data.gouv.fr/fr/datasets/donnees-de-laboratoires-pour-le-depistage-a-compter-du-18-05-2022-si-dep/#/resources
-
-Nous utilisons le fichier : sp-fra-jour-cage10-2023-04-06-18h01.csv qui contient les données agrégées en france du taux d'incidence, actualisées chaque jour (dernière version du 6 avril 2023)
-
 
 ```{r working directory and data, echo=FALSE, include=FALSE}
 lapply(c("dplyr","chron","ggplot2","tidyr","questionr","survival","forcats","tidyselect",
@@ -24,140 +18,10 @@ lapply(c("dplyr","chron","ggplot2","tidyr","questionr","survival","forcats","tid
          "Hmisc","DescTools","swimplot", 'stats', 'EnvStats', 'finalfit'), 
        library, character.only=TRUE)
 
-#données provenant du site
-#https://www.data.gouv.fr/fr/datasets/donnees-de-laboratoires-pour-le-depistage-a-compter-du-18-05-2022-si-dep/#/resources
-#utilisation du fichier :sp-fra-jour-cage10-2023-04-06-18h01.csv
-
 #setwd("C:/Users/candi/Desktop/ETUDES/ENSAE2A/semestre 2/options/projet stat")
 
-df_covid <- read.csv('sp-fra-jour-cage10-2023-04-06-18h01.csv', header = T, sep =';')
 ```
 
-
-
-```{r tidy the data, echo=FALSE, include = FALSE}
-df_covid <- df_covid %>% mutate(
-  jour = as.Date(jour , format = "%d/%m/%Y")
-)
-```
-
-## Représentation des taux d'incidence
-Nous nous intéressons aux données agrégées donc nous représentons ci dessous le taux d'incidence agrégé pour toutes les données de classes d'âge (somme des données).
-
-```{r, fig.align="center", fig.cap="Figure 2: Taux d'incidence agrégé"}
-df_agreg <- df_covid %>% group_by(jour) %>% summarise(Taux_agrégé = sum(Ti))
-df_agreg %>% ggplot(aes(x=jour, y=Taux_agrégé)) + geom_line()
-```
-
-```{r, fig.align="center", fig.cap="Figure 3: log du taux d'incidence"}
-df_agreg %>% ggplot(aes(x=jour, y=log(Taux_agrégé))) + geom_line()
-```
-
-
-## Analyse des données différenciées
-Nous différencions logarithmiquement les données afin de détecter les ruptures. La représentation de la série différenciée est présentée en figure 4. 
-```{r, fig.align="center", fig.cap="Figure 4: Taux d'incidence différenciés sur toute la période"}
-
-T_diff <- numeric(length =length(df_agreg$Taux_agrégé))
-diff_log <- numeric(length =length(df_agreg$Taux_agrégé))
-for (i in 2:length(df_agreg$Taux_agrégé)){
-  T_diff[i] = df_agreg$Taux_agrégé[i] - df_agreg$Taux_agrégé[i-1]
-  diff_log[i] = T_diff[i]/df_agreg$Taux_agrégé[i-1]
-}
-
-df_agreg <- df_agreg %>% mutate(
-  T_diff_agreg = T_diff,
-  diff_log_agreg = diff_log
-)
-
-df_agreg %>% ggplot( aes(x=jour, y =diff_log_agreg)) + geom_line()
-```
-
-Les données sont assez illisibles donc nous les montrons uniquement sur le mois d'octobre 2020 et l'on voit apparaître une tendance hebdomadaire. 
-
-```{r, fig.align="center", fig.cap="Figure 5: Taux d'incidence différenciés sur le mois d'octobre 2020"}
-df_agreg %>% filter(year(jour) == 2020 & month(jour) == 10) %>% ggplot( aes(x=jour, y =diff_log_agreg)) + geom_line()
-``` 
-
-En ne regardant que les lundis
-```{r, fig.align="center", fig.cap="Figure 6: Données différenciées seulement des lundis"}
-df_agreg <- df_agreg %>% mutate(
-  monday = case_when(
-    weekdays(jour) == 'lundi' ~ 1,
-    TRUE ~ 0
-  ),
-  num_monday = case_when(
-    monday == 1~ cumsum(monday),
-    TRUE ~ 0),
-  tuesday = case_when(
-    weekdays(jour) == 'mardi' ~ 1,
-    TRUE ~ 0
-  ),
-  num_tuesday = case_when(
-    tuesday == 1~ cumsum(tuesday),
-    TRUE ~ 0),
-  wed = case_when(
-    weekdays(jour) == 'mercredi' ~ 1,
-    TRUE ~ 0
-  ),
-  num_wed = case_when(
-    wed == 1~ cumsum(wed) - 1,
-    TRUE ~ 0),
-  thur = case_when(
-    weekdays(jour) == 'jeudi' ~ 1,
-    TRUE ~ 0
-  ),
-  num_thur = case_when(
-    thur == 1~ cumsum(wed) - 1,
-    TRUE ~ 0),
-  fri = case_when(
-    weekdays(jour) == 'vendredi' ~ 1,
-    TRUE ~ 0
-  ),
-  num_fri = case_when(
-    fri == 1~ cumsum(fri) - 1,
-    TRUE ~ 0),
-  sat = case_when(
-    weekdays(jour) == 'samedi' ~ 1,
-    TRUE ~ 0
-  ),
-  num_sat = case_when(
-    sat == 1~ cumsum(sat) - 1,
-    TRUE ~ 0),
-  sun = case_when(
-    weekdays(jour) == 'dimanche' ~ 1,
-    TRUE ~ 0
-  ),
-  num_sun = case_when(
-    sun == 1~ cumsum(sun) - 1,
-    TRUE ~ 0),
-  week = num_monday + num_tuesday + num_wed + num_thur + num_fri + num_sat + num_sun
-)
-
-
-#la série sur les lundis
-df_agreg %>% group_by(jour) %>% filter(monday == 1) %>%summarise(diff_log_agreg_mois = sum(diff_log_agreg))%>%ggplot( aes(x=jour, y =diff_log_agreg_mois)) + geom_line() +  geom_smooth(method = lm, formula = y ~ poly(x, 10))
-
-
-
-``` 
-
-
-En sommant par semaine ?
-
-```{r, fig.align="center", fig.cap="Figure 6: Données différenciées sommées par semaine"}
-#la série par semaine
-df_agreg <- df_agreg %>% mutate(
-  jour_ref = 1,
-  jour_num = cumsum(jour_ref)
-)
-df_agreg %>% group_by(year(jour), month(jour),week) %>% summarise(s = sum(diff_log_agreg), j = jour_num)%>%ggplot(aes(x=j,y=s)) +
-  geom_line() + geom_smooth(method = lm, formula = y ~ poly(x, 10))
-
-``` 
-
-# Base numéro 2
-## Importation
 La base utilisée est disponible à ce lien :https://www.data.gouv.fr/fr/datasets/donnees-hospitalieres-relatives-a-lepidemie-de-covid-19/
 et contient les taux d'incidence des hospitalisations, décès et réanimations. 
 
@@ -176,52 +40,20 @@ data <- data %>% filter(dep != '971') %>% filter(dep !='972')%>% filter(dep !='9
 
 ```
 
-Taux d'incidence hospitalisation, de réanimation et de décès agrégés au niveau national
-```{r, fig.align="center", fig.cap="Figure 7: Taux d'incidence"}
+# Taux d'incidence hospitalisation, de réanimation et de décès agrégés au niveau national
+```{r, fig.align="center"}
 library(cowplot)
-data_agreg <- data %>% group_by(jour) %>%summarise(Taux_agrégé_hosp = sum(incid_hosp), Taux_agrege_rea = sum(incid_rea), Taux_agrege_dc = sum(incid_dc))
+data_agreg <- data %>% group_by(jour) %>%summarise(Taux_agrégé_hosp = sum(incid_hosp), Taux_agrege_rea = sum(incid_rea), Taux_agrege_dc = sum(incid_dc), Taux_agrege_rad = sum(incid_rad))
 
-data_agreg %>% ggplot(aes(x=jour, y=Taux_agrégé_hosp)) + geom_line()
-g2 <- data_agreg %>% ggplot(aes(x=jour, y=Taux_agrege_rea)) + geom_line()
-g3 <- data_agreg %>% ggplot(aes(x=jour, y=Taux_agrege_dc)) + geom_line()
+g1 <- data_agreg %>% ggplot(aes(x=jour, y=Taux_agrégé_hosp)) + geom_line() + xlab('Date') + ylab("Hospitalisations")
+g2 <- data_agreg %>% ggplot(aes(x=jour, y=Taux_agrege_rea)) + geom_line() + xlab('Date') + ylab("Réanimations")
+g3 <- data_agreg %>% ggplot(aes(x=jour, y=Taux_agrege_dc)) + geom_line() + xlab('Date') + ylab("Décès")
+g4 <- data_agreg %>% ggplot(aes(x=jour, y=Taux_agrege_rad)) + geom_line()+ xlab('Date') + ylab("Retours à domicile")
 
-plot_grid(g2, g3)
+plot_grid(g1, g2, g3, g4)
 ```
 
-Log des taux d'incidence agrégés
-
-```{r, fig.align="center", fig.cap="Figure 7: log du taux d'incidence"}
-data_agreg %>% ggplot(aes(x=jour, y=log(Taux_agrégé_hosp))) + geom_line()
-
-g2 <- data_agreg %>% ggplot(aes(x=jour, y=log(Taux_agrege_rea))) + geom_line()
-g3 <- data_agreg %>% ggplot(aes(x=jour, y=log(Taux_agrege_dc))) + geom_line()
-plot_grid(g2, g3)
-```
-
-## Différence logarithmique
-On filtre les données et on s'arrête juste avant février 2023 car il y a un pic énorme qui écrase le reste des données.  
-```{r, fig.align="center", fig.cap="Figure 8: Taux d'incidence en différence logarithmique"}
-
-T_diff <- numeric(length =length(data_agreg$Taux_agrégé_hosp))
-diff_log <- numeric(length =length(data_agreg$Taux_agrégé_hosp))
-for (i in 2:length(data_agreg$Taux_agrégé_hosp)){
-  T_diff[i] = data_agreg$Taux_agrégé_hosp[i] - data_agreg$Taux_agrégé_hosp[i-1]
-  diff_log[i] = T_diff[i]/data_agreg$Taux_agrégé_hosp[i-1]
-}
-
-data_agreg <- data_agreg %>% mutate(
-  T_diff_agreg = T_diff,
-  diff_log_agreg = diff_log
-)
-
-
-data_agreg %>% filter(jour < as.Date('2023-02-01', format = '%Y-%m-%d')) %>% ggplot(aes(x=jour, y =diff_log_agreg)) + geom_line() #on filtre les données car anomalies fin février 
-```
-
-
-En regardant seulement les valeurs des lundis. 
-
-```{r, fig.align="center", fig.cap="Figure 9: Données différenciées seulement des lundis et mardis"}
+```{r, fig.align="center"}
 data_agreg <- data_agreg %>% mutate(
   monday = case_when(
     weekdays(jour) == 'lundi' ~ 1,
@@ -242,14 +74,14 @@ data_agreg <- data_agreg %>% mutate(
     TRUE ~ 0
   ),
   num_wed = case_when(
-    wed == 1~ cumsum(wed) - 1,
+    wed == 1~ cumsum(wed) ,
     TRUE ~ 0),
   thur = case_when(
     weekdays(jour) == 'jeudi' ~ 1,
     TRUE ~ 0
   ),
   num_thur = case_when(
-    thur == 1~ cumsum(wed) - 1,
+    thur == 1~ cumsum(thur) - 1,
     TRUE ~ 0),
   fri = case_when(
     weekdays(jour) == 'vendredi' ~ 1,
@@ -276,33 +108,70 @@ data_agreg <- data_agreg %>% mutate(
 )
 
 
-#la série sur les lundis
-data_agreg %>% group_by(jour) %>% filter(monday == 1)%>% filter(jour < as.Date('2023-02-01', format = '%Y-%m-%d')) %>%summarise(diff_log_agreg_lundi = sum(diff_log_agreg))%>%ggplot( aes(x=jour, y =diff_log_agreg_lundi)) + geom_line()+ geom_smooth(method = lm, formula = y ~ poly(x, 10))
-
-data_agreg %>% group_by(jour) %>% filter(tuesday == 1)%>% filter(jour < as.Date('2023-02-01', format = '%Y-%m-%d')) %>%summarise(diff_log_agreg_lundi = sum(diff_log_agreg))%>%ggplot( aes(x=jour, y =diff_log_agreg_lundi)) + geom_line()+ geom_smooth(method = lm, formula = y ~ poly(x, 10))
 
 ``` 
-Les lundis: on voit de plus fortes variations car on avait des valeurs mal relevées le week-end. 
-Si l'on revient à l'évolution du taux d'incidence seulement les mardis et lundis, on voit que l'on a la même évolution : 
 
-```{r, fig.align="center", fig.cap="Figure 10: Taux d'incidence seulement des lundis et mardis"}
-data_agreg %>% group_by(jour) %>% filter(monday == 1) %>% ggplot(aes(x=jour, y=Taux_agrégé_hosp)) + geom_line()
+# Moyenne par semaine
 
-
-data_agreg %>% group_by(jour) %>% filter(tuesday == 1) %>% ggplot(aes(x=jour, y=Taux_agrégé_hosp)) + geom_line()
-```
-
-
-En sommant les valeurs par semaine (pour moyenner en quelque sorte ? )
-
-```{r, fig.align="center", fig.cap="Figure 10: Données différenciées sommées par semaine"}
+```{r, fig.align="center"}
 #la série par semaine
-data_agreg <- data_agreg %>% mutate(
-  jour_ref = 1,
-  jour_num = cumsum(jour_ref)
-)
-data_agreg %>% filter(jour < as.Date('2023-02-01', format = '%Y-%m-%d'))%>% group_by(year(jour), month(jour),week) %>% summarise(s = sum(diff_log_agreg), j = jour_num)%>%ggplot(aes(x=j,y=s)) +
-  geom_line()+ geom_smooth(method = lm, formula = y ~ poly(x, 10))
+#data_agreg <- data_agreg %>% mutate(jour_ref = 1,jour_num = cumsum(jour_ref))
+#data_agreg %>% filter(jour < as.Date('2023-02-01', format = '%Y-%m-%d'))%>% group_by(year(jour), month(jour),week) %>% summarise(s = sum(diff_log_agreg), j = jour_num)%>%ggplot(aes(x=j,y=s)) +geom_line()+ geom_smooth(method = lm, formula = y ~ poly(x, 10))
+
+
+#données normales sur 7 jours 
+g1 <- data_agreg %>% group_by(week) %>% summarise(s=mean(Taux_agrégé_hosp))%>%ggplot(aes(x=week,y=s))+
+  geom_line() + xlab('Semaine') + ylab('Hospitalisations')
+
+g2 <- data_agreg %>% group_by(week) %>% summarise(s=mean(Taux_agrege_rea))%>%ggplot(aes(x=week,y=s))+
+  geom_line() + xlab('Semaine') + ylab('Réanimations')
+
+g3 <- data_agreg %>% group_by(week) %>% summarise(s=mean(Taux_agrege_dc))%>%ggplot(aes(x=week,y=s))+
+  geom_line() + xlab('Semaine') + ylab('Décès')
+
+g4 <- data_agreg %>% group_by(week) %>% summarise(s=mean(Taux_agrege_rad))%>%ggplot(aes(x=week,y=s))+
+  geom_line() + xlab('Semaine') + ylab('Retours à domicile')
+
+plot_grid(g1,g2,g3,g4)
+
 
 ``` 
+
+
+# Variations relatives 
+Le premier graphe correspond à la série différenciée logarithmiquement représentée par jour. Le deuxième graphe correspond à une moyenne par semaine de la différence logarithmique par jour. 
+Nous nous sommes restreints à avant février 2023 pour la lisibilité des données car il y a un pic en février en 2023 qui écrase le reste du graphe. 
+```{r, fig.align="center"}
+T_diff_hosp <- numeric(length =length(data_agreg$Taux_agrégé_hosp))
+diff_log_hosp <- numeric(length =length(data_agreg$Taux_agrégé_hosp))
+for (i in 2:length(data_agreg$Taux_agrégé_hosp)){
+  T_diff_hosp[i] = data_agreg$Taux_agrégé_hosp[i] - data_agreg$Taux_agrégé_hosp[i-1]
+  diff_log_hosp[i] = T_diff_hosp[i]/data_agreg$Taux_agrégé_hosp[i-1]
+}
+
+T_diff_rea <- numeric(length =length(data_agreg$Taux_agrégé_hosp))
+diff_log_rea <- numeric(length =length(data_agreg$Taux_agrégé_hosp))
+for (i in 2:length(data_agreg$Taux_agrégé_hosp)){
+  T_diff_rea[i] = data_agreg$Taux_agrégé_hosp[i] - data_agreg$Taux_agrégé_hosp[i-1]
+  diff_log_rea[i] = T_diff_rea[i]/data_agreg$Taux_agrégé_hosp[i-1]
+}
+
+data_agreg <- data_agreg %>% mutate(
+  T_diff_hosp_agreg = T_diff_hosp,
+  diff_log_hosp_agreg = diff_log_hosp,
+  T_diff_rea_agreg = T_diff_rea,
+  diff_log_rea_agreg = diff_log_rea)
+
+
+g1 <- data_agreg %>% filter(jour < as.Date('2023-02-01', format = '%Y-%m-%d')) %>%ggplot(aes(x=jour,y=diff_log_hosp_agreg))+
+  geom_line() + xlab('jour') + ylab('Hospitalisations')
+g1
+
+g2 <- data_agreg %>% filter(jour < as.Date('2023-02-01', format = '%Y-%m-%d')) %>% group_by(week) %>% summarise(s=mean(diff_log_hosp_agreg)) %>%ggplot(aes(x=week,y=s))+
+  geom_line() + xlab('jour') + ylab('Hospitalisations')
+
+g2
+
+``` 
+
 
