--- a/R_file.Rmd
+++ b/R_file.Rmd
@@ -138,33 +138,30 @@ plot_grid(g1,g2,g3,g4)
 ``` 
 
 
-# Variations relatives hospitalières
+# Dérivée log
 En utilisant la différence première sur les valeurs agrégrées par semaine, on a des graphes cohérents avec l'article. 
 Pour éviter d'avoir le dernier pic qui écrase le reste, on enlève les valeurs des deux dernières semaines.
 ```{r, fig.align="center"}
 data_week <- data_agreg %>% group_by(week) %>% summarise(s_hosp=mean(Taux_agrégé_hosp), s_rea = mean(Taux_agrege_rea), s_dc = mean(Taux_agrege_dc), s_rad = sum(Taux_agrege_rad))
 
-g1 <- data_week %>% mutate(
+g5 <- data_week %>% mutate(
   diff_hosp = diff(s_hosp)/s_hosp
 ) %>% filter(week<158) %>% ggplot(aes(x=week,y=diff_hosp))+
-  geom_line() + xlab('jour') + ylab('Hospitalisations')
+  geom_line() + xlab('jour') + ylab('Hospitalisations (Série différenciée)')
 
 
-g2 <- data_week %>% mutate(
+g6 <- data_week %>% mutate(
   diff_rea = diff(s_rea)/s_rea
 ) %>% filter(week<158) %>% ggplot(aes(x=week,y=diff_rea))+
-  geom_line() + xlab('jour') + ylab('Réanimations')
+  geom_line() + xlab('jour') + ylab('Réanimations (série différenciée)')
 
-g3 <- data_week %>% mutate(
-  diff_dc = diff(s_dc)/s_dc
-)  %>% filter(week<158)%>% ggplot(aes(x=week,y=diff_dc))+
-  geom_line() + xlab('jour') + ylab('Décès')
 
-g4 <- data_week %>% mutate(
-  diff_rad = diff(s_rad)/s_rad
-) %>% filter(week<158) %>% ggplot(aes(x=week,y=diff_rad))+
-  geom_line() + xlab('jour') + ylab('RAD')
 
-plot_grid(g1, g2, g3, g4)
+#g7 <- data_week %>% mutate(diff_dc = diff(s_dc)/s_dc)  %>% filter(week<158)%>% ggplot(aes(x=week,y=diff_dc))+ geom_line() + xlab('jour') + ylab('Décès')
+
+#g8 <- data_week %>% mutate(diff_rad = diff(s_rad)/s_rad) %>% filter(week<158) %>% ggplot(aes(x=week,y=diff_rad))+geom_line() + xlab('jour') + ylab('RAD')
+
+
+plot_grid(g1, g2, g5, g6)
 ```
 
